welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:2: error: not found: value baissebrosse
baissebrosse()
^Source:6: error: not found: value avancer
avancer()
^Source:7: error: not found: value avancer
avancer()
^Source:8: error: not found: value avancer
avancer()
^Source:9: error: not found: value avancer
avancer()
^Source:13: error: not found: value avancer
avancer()
^Source:14: error: not found: value avancer
avancer()
^Source:15: error: not found: value avancer
avancer()
^Source:16: error: not found: value avancer
avancer()
^Source:20: error: not found: value avancer
avancer()
^Source:21: error: not found: value avancer
avancer()
^Source:22: error: not found: value avancer
avancer()
^Source:23: error: not found: value avancer
avancer()
^Source:27: error: not found: value avancer
avancer()
^Source:28: error: not found: value avancer
avancer()
^Source:31: error: not found: value avancer
avancer()
^Source:33: error: not found: value levebrosse
levebrosse() 
^