welcome.lessons.welcome.instructions.InstructionsDrawG.scala.code
baissebrosse()

gauche()

avancer()
avancer()
avancer()
avancer()

gauche()

avancer()
avancer()
avancer()
avancer()

gauche()

avancer()
avancer()
avancer()
avancer()

gauche()

avancer()
avancer()

gauche()
avancer()

levebrosse()